<resources>
    <string name="app_name">TouchTest</string>
    <string name="toQuestion">問題へ</string>
    <string name="kind_text">問題の種類</string>
    <string name="num_que_text">出題数</string>
    <string name="ten_text">10</string>
    <string name="twenty_text">20</string>
    <string name="thirty_text">30</string>
    <string name="forty_text">40</string>
    <string name="fifty_text">50</string>
    <string name="hundred_text">100</string>
    <string name="all_text">all</string>
    <string name="start_text">スタート</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="tohome_text">ホームへ</string>
    <string name="textview_text">TextView</string>
    <string name="point_text">....</string>
</resources>